added aws setup

--- a/convolutional-nns.ipynb
+++ b/convolutional-nns.ipynb
@@ -31,32 +31,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Attaching package: ‘dplyr’\n",
-      "\n",
-      "The following objects are masked from ‘package:stats’:\n",
-      "\n",
-      "    filter, lag\n",
-      "\n",
-      "The following objects are masked from ‘package:base’:\n",
-      "\n",
-      "    intersect, setdiff, setequal, union\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "library(keras)\n",
     "library(dplyr)\n",
-    "library(ggplot2)\n",
-    "\n",
+    "library(ggplot2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "mnist <- dataset_mnist()"
    ]
   },
@@ -80,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -116,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -135,19 +124,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x_train_shape: 60000 28 28 1 \n",
-      "60000 train samples\n",
-      "10000 test samples\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cat('x_train_shape:', dim(x_train), '\\n')\n",
     "cat(nrow(x_train), 'train samples\\n')\n",
@@ -171,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -198,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -220,39 +199,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "________________________________________________________________________________\n",
-      "Layer (type)                        Output Shape                    Param #     \n",
-      "================================================================================\n",
-      "conv2d_1 (Conv2D)                   (None, 26, 26, 32)              320         \n",
-      "________________________________________________________________________________\n",
-      "activation_1 (Activation)           (None, 26, 26, 32)              0           \n",
-      "________________________________________________________________________________\n",
-      "dropout_1 (Dropout)                 (None, 26, 26, 32)              0           \n",
-      "________________________________________________________________________________\n",
-      "conv2d_2 (Conv2D)                   (None, 24, 24, 64)              18496       \n",
-      "________________________________________________________________________________\n",
-      "activation_2 (Activation)           (None, 24, 24, 64)              0           \n",
-      "________________________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2D)      (None, 12, 12, 64)              0           \n",
-      "________________________________________________________________________________\n",
-      "flatten_1 (Flatten)                 (None, 9216)                    0           \n",
-      "________________________________________________________________________________\n",
-      "dense_1 (Dense)                     (None, 10)                      92170       \n",
-      "================================================================================\n",
-      "Total params: 110,986\n",
-      "Trainable params: 110,986\n",
-      "Non-trainable params: 0\n",
-      "________________________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "summary(model)"
    ]
@@ -268,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -290,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -314,59 +263,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<dl>\n",
-       "\t<dt>$loss</dt>\n",
-       "\t\t<dd>0.0421948220033664</dd>\n",
-       "\t<dt>$acc</dt>\n",
-       "\t\t<dd>0.9867</dd>\n",
-       "</dl>\n"
-      ],
-      "text/latex": [
-       "\\begin{description}\n",
-       "\\item[\\$loss] 0.0421948220033664\n",
-       "\\item[\\$acc] 0.9867\n",
-       "\\end{description}\n"
-      ],
-      "text/markdown": [
-       "$loss\n",
-       ":   0.0421948220033664\n",
-       "$acc\n",
-       ":   0.9867\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "$loss\n",
-       "[1] 0.04219482\n",
-       "\n",
-       "$acc\n",
-       "[1] 0.9867\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "ename": "ERROR",
-     "evalue": "Error in cat(\"Test loss:\", scores[[1]], \"\\n\"): object 'scores' not found\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in cat(\"Test loss:\", scores[[1]], \"\\n\"): object 'scores' not found\nTraceback:\n",
-      "1. cat(\"Test loss:\", scores[[1]], \"\\n\")"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model %>% evaluate(x_test, y_test)\n",
-    "\n",
-    "cat('Test loss:', scores[[1]], '\\n')\n",
-    "cat('Test accuracy:', scores[[2]], '\\n')"
+    "model %>% evaluate(x_test, y_test)"
    ]
   },
   {
@@ -385,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -556,7 +457,8 @@
    "outputs": [],
    "source": [
     "img_height <- 224\n",
-    "img_width <- 224"
+    "img_width <- 224\n",
+    "batch_size <- 16"
    ]
   },
   {
@@ -601,7 +503,7 @@
    "source": [
     "train_generator <- flow_images_from_directory(\n",
     "  train_directory, \n",
-    "  generator = image_data_generator(), #datagen,\n",
+    "  generator = image_data_generator(), ,\n",
     "  target_size = c(img_height, img_width),\n",
     "  color_mode = \"rgb\",\n",
     "  class_mode = \"binary\", \n",
@@ -611,7 +513,7 @@
     "\n",
     "validation_generator <- flow_images_from_directory(\n",
     "  validation_directory, \n",
-    "  generator = image_data_generator(), #datagen,\n",
+    "  generator = image_data_generator(), ,\n",
     "  target_size = c(img_height, img_width), \n",
     "  color_mode = \"rgb\", \n",
     "  classes = NULL,\n",
@@ -649,7 +551,7 @@
     "model3 %>%\n",
     "  layer_conv_2d(filters = 16,                      # number of convolution filters in conv layer 1\n",
     "                kernel_size = c(3,3),              # use 3 x 3 convolution filter in conv layer 1\n",
-    "                input_shape = c(224, 224, 3)) %>%    # shape of input data\n",
+    "                input_shape = c(50, 50, 3)) %>%    # shape of input data\n",
     "  layer_activation('relu') %>%                     # activation function in conv layer 1\n",
     "  layer_dropout(rate = 0.20) %>%                   # apply 20% dropout after conv layer 1\n",
     "  layer_conv_2d(filters = 16,                      # number of convolution filters in conv layer 2\n",
@@ -680,12 +582,10 @@
    },
    "outputs": [],
    "source": [
-    "batch_size <- 5\n",
-    "\n",
     "model3 %>% fit_generator(\n",
     "  train_generator,\n",
     "  steps_per_epoch = as.integer(train_samples / batch_size), \n",
-    "  epochs = 10, \n",
+    "  epochs = 20, \n",
     "  validation_data = validation_generator,\n",
     "  validation_steps = as.integer(validation_samples / batch_size),\n",
     "  verbose = 1)\n"
@@ -701,9 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "model3 %>% evaluate_generator(test_generator, steps = test_samples)"
