--- a/transfer-learning.ipynb
+++ b/transfer-learning.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -32,15 +32,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "train_directory <- \"data/invasives/train/\"\n",
-    "validation_directory <- \"data/invasives/validation/\"\n",
-    "test_directory <- \"data/invasives/test/\""
+    "train_directory <- \"data/invasives/sample/train/\"\n",
+    "validation_directory <- \"data/invasives/sample/validation/\"\n",
+    "test_directory <- \"data/invasives/sample/test/\"\n",
+    "\n",
+    "# once you are satisfied the code is working, run full dataset\n",
+    "# train_directory <- \"data/invasives/train/\"\n",
+    "# validation_directory <- \"data/invasives/validation/\"\n",
+    "# test_directory <- \"data/invasives/test/\""
    ]
   },
   {
@@ -52,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -70,28 +75,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "953"
-      ],
-      "text/latex": [
-       "953"
-      ],
-      "text/markdown": [
-       "953"
-      ],
-      "text/plain": [
-       "[1] 953"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "train_samples"
    ]
@@ -105,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -113,8 +101,7 @@
    "source": [
     "img_height <- 224\n",
     "img_width <- 224\n",
-    "batch_size <- 16\n",
-    "epochs <- 4"
+    "batch_size <- 16"
    ]
   },
   {
@@ -126,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -172,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -191,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -215,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -239,26 +226,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "model %>% fit_generator(\n",
     "  train_generator,\n",
-    "  steps_per_epoch = 1, \n",
-    "  epochs = 1, \n",
+    "  steps_per_epoch = as.integer(train_samples / batch_size), \n",
+    "  epochs = 5, \n",
     "  validation_data = validation_generator,\n",
-    "  validation_steps = 1,\n",
+    "  validation_steps = as.integer(validation_samples / batch_size),\n",
     "  verbose = 1)"
    ]
   },
@@ -271,139 +250,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Model\n",
-       "________________________________________________________________________________\n",
-       "Layer (type)                        Output Shape                    Param #     \n",
-       "================================================================================\n",
-       "input_1 (InputLayer)                (None, None, None, 3)           0           \n",
-       "________________________________________________________________________________\n",
-       "block1_conv1 (Conv2D)               (None, None, None, 64)          1792        \n",
-       "________________________________________________________________________________\n",
-       "block1_conv2 (Conv2D)               (None, None, None, 64)          36928       \n",
-       "________________________________________________________________________________\n",
-       "block1_pool (MaxPooling2D)          (None, None, None, 64)          0           \n",
-       "________________________________________________________________________________\n",
-       "block2_conv1 (Conv2D)               (None, None, None, 128)         73856       \n",
-       "________________________________________________________________________________\n",
-       "block2_conv2 (Conv2D)               (None, None, None, 128)         147584      \n",
-       "________________________________________________________________________________\n",
-       "block2_pool (MaxPooling2D)          (None, None, None, 128)         0           \n",
-       "________________________________________________________________________________\n",
-       "block3_conv1 (Conv2D)               (None, None, None, 256)         295168      \n",
-       "________________________________________________________________________________\n",
-       "block3_conv2 (Conv2D)               (None, None, None, 256)         590080      \n",
-       "________________________________________________________________________________\n",
-       "block3_conv3 (Conv2D)               (None, None, None, 256)         590080      \n",
-       "________________________________________________________________________________\n",
-       "block3_pool (MaxPooling2D)          (None, None, None, 256)         0           \n",
-       "________________________________________________________________________________\n",
-       "block4_conv1 (Conv2D)               (None, None, None, 512)         1180160     \n",
-       "________________________________________________________________________________\n",
-       "block4_conv2 (Conv2D)               (None, None, None, 512)         2359808     \n",
-       "________________________________________________________________________________\n",
-       "block4_conv3 (Conv2D)               (None, None, None, 512)         2359808     \n",
-       "________________________________________________________________________________\n",
-       "block4_pool (MaxPooling2D)          (None, None, None, 512)         0           \n",
-       "________________________________________________________________________________\n",
-       "block5_conv1 (Conv2D)               (None, None, None, 512)         2359808     \n",
-       "________________________________________________________________________________\n",
-       "block5_conv2 (Conv2D)               (None, None, None, 512)         2359808     \n",
-       "________________________________________________________________________________\n",
-       "block5_conv3 (Conv2D)               (None, None, None, 512)         2359808     \n",
-       "________________________________________________________________________________\n",
-       "block5_pool (MaxPooling2D)          (None, None, None, 512)         0           \n",
-       "________________________________________________________________________________\n",
-       "global_average_pooling2d_1 (GlobalA (None, 512)                     0           \n",
-       "________________________________________________________________________________\n",
-       "dense_1 (Dense)                     (None, 1024)                    525312      \n",
-       "________________________________________________________________________________\n",
-       "dense_2 (Dense)                     (None, 1)                       1025        \n",
-       "================================================================================\n",
-       "Total params: 15,241,025\n",
-       "Trainable params: 15,241,025\n",
-       "Non-trainable params: 0\n",
-       "________________________________________________________________________________\n",
-       "\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ERROR",
-     "evalue": "Error in evaluate_generator(., model, test_generator, steps = 1, max_queue_size = 1): unused argument (test_generator)\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in evaluate_generator(., model, test_generator, steps = 1, max_queue_size = 1): unused argument (test_generator)\nTraceback:\n",
-      "1. model %>% evaluate_generator(model, test_generator, steps = 1, \n .     max_queue_size = 1)",
-      "2. withVisible(eval(quote(`_fseq`(`_lhs`)), env, env))",
-      "3. eval(quote(`_fseq`(`_lhs`)), env, env)",
-      "4. eval(quote(`_fseq`(`_lhs`)), env, env)",
-      "5. `_fseq`(`_lhs`)",
-      "6. freduce(value, `_function_list`)",
-      "7. withVisible(function_list[[k]](value))",
-      "8. function_list[[k]](value)"
-     ]
-    }
-   ],
-   "source": [
-    "model %>% evaluate_generator(model, test_generator, steps = 1,\n",
-    "                            max_queue_size = 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ERROR",
-     "evalue": "Error in as.integer(max_queue_size): cannot coerce type 'environment' to vector of type 'integer'\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in as.integer(max_queue_size): cannot coerce type 'environment' to vector of type 'integer'\nTraceback:\n",
-      "1. model %>% predict_generator(model, test_generator, steps = 1)",
-      "2. withVisible(eval(quote(`_fseq`(`_lhs`)), env, env))",
-      "3. eval(quote(`_fseq`(`_lhs`)), env, env)",
-      "4. eval(quote(`_fseq`(`_lhs`)), env, env)",
-      "5. `_fseq`(`_lhs`)",
-      "6. freduce(value, `_function_list`)",
-      "7. withVisible(function_list[[k]](value))",
-      "8. function_list[[k]](value)",
-      "9. predict_generator(., model, test_generator, steps = 1)"
-     ]
-    }
-   ],
-   "source": [
-    "model %>% predict_generator(model,\n",
-    "                           test_generator,\n",
-    "                           steps = 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "model %>% evaluate_generator(\n",
+    "    test_generator,\n",
+    "    steps = test_samples)"
+   ]
   }
  ],
  "metadata": {
