added slides and Rmd files from CT workshop

--- a/convolutional-nns.ipynb
+++ b/convolutional-nns.ipynb
@@ -32,7 +32,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "library(keras)\n",
@@ -43,7 +45,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "mnist <- dataset_mnist()"
@@ -125,7 +129,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cat('x_train_shape:', dim(x_train), '\\n')\n",
@@ -200,7 +206,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "summary(model)"
@@ -264,7 +272,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model %>% evaluate(x_test, y_test)"
@@ -406,7 +416,7 @@
    "source": [
     "## Classifying invasive species\n",
     "\n",
-    "In this section we'll build a CNN to predict whether an image contains an invasive species or not. The data is taken from [this Kaggle problem](https://www.kaggle.com/c/invasive-species-monitoring). The data set contains pictures taken in a Brazilian national forest. In some of the pictures there is Hydrangea, a beautiful invasive species original of Asia. We would like to predict the presence of the invasive species.\n"
+    "In this section we'll build a CNN to predict whether an image contains an invasive species or not. The data is taken from [this Kaggle problem](https://www.kaggle.com/c/invasive-species-monitoring). The data set contains pictures taken in a Brazilian national forest. In some of the pictures there is Hydrangea, a beautiful invasive species original of Asia. We would like to predict the presence of the invasive species. Some of the code in this example is taken from one of the Kaggle competition \"kernels\" (code people make publicably available) [here](https://www.kaggle.com/ogurtsov/0-99-with-r-and-keras-inception-v3-fine-tune).\n"
    ]
   },
   {
@@ -420,7 +430,7 @@
     "\n",
     "I recommend creating a folder called \"sample\" that has exactly the same folder structure as above, but just contains a small number (10 or so) images in each folder. This will allow you to test whether your code is working without having to wait for a long time. Once you are satisfied your code is running, you can just change the directory reference to the main set of folders.\n",
     "\n",
-    "We start by specifying where our training, test, and validation images are (so, later on, remove the reference to \"sample\" below"
+    "We start by specifying where our training, test, and validation images are (so, later on, remove the reference to \"sample\" below)."
    ]
   },
   {
@@ -551,7 +561,7 @@
     "model3 %>%\n",
     "  layer_conv_2d(filters = 16,                      # number of convolution filters in conv layer 1\n",
     "                kernel_size = c(3,3),              # use 3 x 3 convolution filter in conv layer 1\n",
-    "                input_shape = c(50, 50, 3)) %>%    # shape of input data\n",
+    "                input_shape = c(img_height, img_width, 3)) %>%    # shape of input data\n",
     "  layer_activation('relu') %>%                     # activation function in conv layer 1\n",
     "  layer_dropout(rate = 0.20) %>%                   # apply 20% dropout after conv layer 1\n",
     "  layer_conv_2d(filters = 16,                      # number of convolution filters in conv layer 2\n",
@@ -601,7 +611,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model3 %>% evaluate_generator(test_generator, steps = test_samples)"
