--- a/neural-networks.ipynb
+++ b/neural-networks.ipynb
@@ -145,14 +145,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# check dimensions\n",
     "dim(x_train)\n",
     "dim(y_train)\n",
     "dim(x_test)\n",
-    "dim(y_test)"
+    "dim(y_test)\n",
+    "y_test"
    ]
   },
   {
@@ -277,7 +281,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "summary(model)"
@@ -314,9 +320,8 @@
    },
    "outputs": [],
    "source": [
-    "myopt = optimizer_adagrad(lr=0.0001, epsilon=1e-08, decay=0.0)\n",
     "model %>% compile(\n",
-    "  optimizer = optimizer_adagrad(lr=0.0001, epsilon=1e-08, decay=0.0),\n",
+    "  optimizer = 'adam',\n",
     "  loss = 'binary_crossentropy',\n",
     "  metrics = c('accuracy')\n",
     ")"
@@ -352,10 +357,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "model %>% fit(x_train, y_train, epochs = 250, batch_size = 32) %>% plot()"
+    "model %>% fit(x_train, y_train, epochs = 20, batch_size = 32) %>% plot()"
    ]
   },
   {
@@ -388,7 +395,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model %>% evaluate(x_test, y_test, batch_size=32, verbose = 1)"
@@ -406,7 +415,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model %>% predict_classes(x_test) %>% head()"
@@ -468,7 +479,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "summary(model2)"
@@ -484,10 +497,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "model2 %>% fit(x_train, y_train, epochs = 250, batch_size = 32) %>% plot()"
+    "model2 %>% fit(x_train, y_train, epochs = 25, batch_size = 32) %>% plot()"
    ]
   },
   {
@@ -500,7 +515,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model2 %>% evaluate(x_test, y_test, batch_size=32, verbose = 1)"
@@ -571,10 +588,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "model3 %>% fit(x_train, y_train, epochs = 250, batch_size = 32) %>% plot()"
+    "model3 %>% fit(x_train, y_train, epochs = 25, batch_size = 32) %>% plot()"
    ]
   },
   {
@@ -587,7 +606,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model3 %>% evaluate(x_test, y_test, batch_size=32, verbose = 1)"
@@ -601,18 +622,7 @@
     "\n",
     "No introduction to neural networks is complete without the MNIST dataset! :) The MNIST dataset is a handwritten digit recognition problem, in which handwritten digits (represented by 28x28 grayscale images) must be classified into one of the 10 digits (0,1,...,9). I included it here to give a quick introduction to multi-class classification. The dataset is included with Keras and can be accessed using the `dataset_mnist()` function. \n",
     "\n",
-    "We first load the **imager** package, which has many useful tools for image processing (we just use it to plot a few sample images), and then the data. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "library(imager)"
+    "We first load the data. "
    ]
   },
   {
@@ -653,7 +663,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we just plot a few of the images."
+    "Next we'll plot a few of the images. Before we can do that, we need to transform the data into \"long format\", so that we can use **ggplot** for the plotting (thanks to Rob Schlegel for the code below)."
    ]
   },
   {
@@ -662,8 +672,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "par(mfrow = c(1,5))\n",
-    "for(i in 1:5){plot(as.cimg(t(x_test[i,,])))}"
+    "# Tranform wide to long, in preparation for ggplot\n",
+    "x_train_long <- as.data.frame(x_train) %>%\n",
+    "  mutate(picture = 1:nrow(.)) %>%\n",
+    "  slice(1:5) %>% # Choose number of pictures to visualise\n",
+    "  gather(-picture, key = \"index\", value = \"shade\") %>%\n",
+    "  arrange(picture) %>%\n",
+    "  group_by(picture) %>%\n",
+    "  mutate(index = 1:784,\n",
+    "         y = rep(rev(seq(1:28)), 28),\n",
+    "         x = rep(1:28, each = 28))\n",
+    "\n",
+    "# Visualise\n",
+    "ggplot(data = x_train_long, aes(x = x, y = y, fill = shade)) +\n",
+    "  geom_raster() +\n",
+    "  scale_fill_gradient(low = \"white\", high = \"black\") +\n",
+    "  coord_equal(expand = 0) +\n",
+    "  facet_wrap(~picture, nrow = 1)\n"
    ]
   },
   {
@@ -770,9 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "summary(model)"
@@ -836,9 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plot(history)"
@@ -854,9 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "model %>% evaluate(x_test, y_test)"
@@ -872,22 +891,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "# get IDs of incorrectly predicted test cases\n",
     "preds <- model %>% predict_classes(x_test)              # get predicted classes for test data\n",
     "wrong_preds <- tibble(id = 1:nrow(y_test),              # make tibble with obs, pred, and id\n",
     "                      obs = mnist$test$y, \n",
     "                      preds = preds) %>%\n",
-    "filter(obs != preds)                                    # identify incorrect classifications\n",
+    "    filter(obs != preds)                                # identify incorrect classifications\n",
     "\n",
-    "par(mfrow = c(1,5))\n",
-    "for(i in 1:5){      \n",
-    "    wrong_x <- mnist$test$x[wrong_preds$id[i],,]        # extract pixel values for incorrectly class. image\n",
-    "    plot(as.cimg(t(wrong_x)))                           # plot image\n",
-    "}"
+    "# create a subset of the test data containing only wrong predictions\n",
+    "x_test_wrong <- x_test[wrong_preds$id, ]\n",
+    "\n",
+    "# tranform wide to long, in preparation for ggplot\n",
+    "x_test_wrong_long <- as.data.frame(x_test_wrong) %>%\n",
+    "  mutate(picture = 1:nrow(.)) %>%\n",
+    "  slice(1:5) %>% # Choose number of pictures to visualise\n",
+    "  gather(-picture, key = \"index\", value = \"shade\") %>%\n",
+    "  arrange(picture) %>%\n",
+    "  group_by(picture) %>%\n",
+    "  mutate(index = 1:784,\n",
+    "         y = rep(rev(seq(1:28)), 28),\n",
+    "         x = rep(1:28, each = 28))\n",
+    "\n",
+    "# visualise\n",
+    "ggplot(data = x_test_wrong_long, aes(x = x, y = y, fill = shade)) +\n",
+    "  geom_raster() +\n",
+    "  scale_fill_gradient(low = \"white\", high = \"black\") +\n",
+    "  coord_equal(expand = 0) +\n",
+    "  facet_wrap(~picture, nrow = 1)"
    ]
   },
   {
